[gd_scene load_steps=10 format=3 uid="uid://cmv168mgurrlp"]

[ext_resource type="Script" uid="uid://678x32kmrkb5" path="res://source/client/ui/chat/chat_menu.gd" id="1_hxcw4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl2eg"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.839216)

[sub_resource type="Gradient" id="Gradient_s6uxj"]
colors = PackedColorArray(0, 0, 0, 0.678431, 0.137255, 0.137255, 0.137255, 0.529412)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_oenax"]
gradient = SubResource("Gradient_s6uxj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ary8x"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 5.0
content_margin_bottom = 10.0
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.105882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlimx"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_top = 1
border_color = Color(0.2, 0.2, 0.2, 1)
expand_margin_left = 10.0
expand_margin_right = 15.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jlimx"]
content_margin_top = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oenax"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0.352941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6uxj"]
bg_color = Color(1, 0.0237725, 0.860263, 1)

[node name="Chat" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hxcw4")

[node name="PeekFeed" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_right = 300.0
grow_vertical = 0
mouse_filter = 0

[node name="MessageDisplay" type="RichTextLabel" parent="PeekFeed"]
custom_minimum_size = Vector2(300, 125)
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_nl2eg")
bbcode_enabled = true

[node name="MessageEdit" type="LineEdit" parent="PeekFeed"]
layout_mode = 2
placeholder_text = "Enter your message here"

[node name="FadeOutTimer" type="Timer" parent="PeekFeed"]
wait_time = 3.0
one_shot = true

[node name="FullFeed" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundGradient" type="TextureRect" parent="FullFeed"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -445.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_oenax")

[node name="Control" type="MarginContainer" parent="FullFeed"]
layout_mode = 0
offset_right = 522.0
offset_bottom = 539.0
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="FullFeed/Control"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ContactPanel" type="PanelContainer" parent="FullFeed/Control/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ary8x")

[node name="VBoxContainer" type="VBoxContainer" parent="FullFeed/Control/HBoxContainer/ContactPanel"]
layout_mode = 2

[node name="PublicLabel" type="Label" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
layout_mode = 2
text = "Public"

[node name="Button" type="Button" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "System"

[node name="Button2" type="Button" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "World"

[node name="Button6" type="Button" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Team"

[node name="Button5" type="Button" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Guild"

[node name="HSeparator" type="HSeparator" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxFlat_jlimx")

[node name="PrivateLabel" type="Label" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
layout_mode = 2
text = "Private"

[node name="Button3" type="Button" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = " New message"

[node name="Button4" type="Button" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = " New message"

[node name="HSeparator2" type="HSeparator" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxFlat_jlimx")

[node name="AddButton" type="Button" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 4.0
text = "Add"

[node name="CloseButton" type="Button" parent="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 10
text = "Close"

[node name="VSeparator" type="VSeparator" parent="FullFeed/Control/HBoxContainer"]
modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 2
theme_override_constants/separation = -1

[node name="ChatPanel" type="PanelContainer" parent="FullFeed/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_jlimx")

[node name="VBoxContainer2" type="VBoxContainer" parent="FullFeed/Control/HBoxContainer/ChatPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "World"
horizontal_alignment = 1

[node name="Button" type="Button" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2"]
self_modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_oenax")
theme_override_styles/background = SubResource("StyleBoxFlat_s6uxj")
bbcode_enabled = true
text = "[color=gray]SenderName[/color]
Hello
[right][color=gray]Me[/color]
[right]Hi
"

[node name="HSeparator2" type="HSeparator" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2"]
modulate = Color(0.2, 0.2, 0.2, 1)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter a message"
alignment = 1

[node name="Button" type="Button" parent="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Send"

[connection signal="gui_input" from="PeekFeed" to="." method="_on_peek_feed_gui_input"]
[connection signal="timeout" from="PeekFeed/FadeOutTimer" to="." method="_on_fade_out_timer_timeout"]
[connection signal="pressed" from="FullFeed/Control/HBoxContainer/ContactPanel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="meta_clicked" from="FullFeed/Control/HBoxContainer/ChatPanel/VBoxContainer2/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
